WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84491
[chromium] Fix compile errors when DEBUG_GL_CALLS is enabled
https://bugs.webkit.org/show_bug.cgi?id=84491
Summary
[chromium] Fix compile errors when DEBUG_GL_CALLS is enabled
Alexandre Elias
Reported
2012-04-20 13:55:51 PDT
[chromium] Fix compile errors when DEBUG_GL_CALLS is enabled
Attachments
Patch
(16.40 KB, patch)
2012-04-20 14:01 PDT
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexandre Elias
Comment 1
2012-04-20 14:01:11 PDT
Created
attachment 138156
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-20 15:18:21 PDT
Comment on
attachment 138156
[details]
Patch Clearing flags on attachment: 138156 Committed
r114787
: <
http://trac.webkit.org/changeset/114787
>
WebKit Review Bot
Comment 3
2012-04-20 15:18:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug