[chromium] Fix compile errors when DEBUG_GL_CALLS is enabled https://bugs.webkit.org/show_bug.cgi?id=84491

Patch by Alexandre Elias <aelias@google.com> on 2012-04-20
Reviewed by Ojan Vafai.

DEBUG_GL_CALLS had not been used in a while and the mode no longer
compiled when I tried it.  I improved the GLC macro to support either
raw pointers or RefPtrs, and to be a single expression in order to
interact properly with if/else blocks.  I fixed the cases where we
were passing in the "context" method pointer by mistake, and removed the
now-unnecessary "get()" calls for the RefPtrs.

No new tests. (No-op change in release builds.)

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::initialize):
(WebCore::LayerRendererChromium::clearRenderSurface):
(WebCore::LayerRendererChromium::beginDrawingFrame):
(WebCore::LayerRendererChromium::doNoOp):
(WebCore::LayerRendererChromium::drawQuad):
(WebCore::LayerRendererChromium::drawTextureQuad):
(WebCore::LayerRendererChromium::drawHeadsUpDisplay):
(WebCore::LayerRendererChromium::finishDrawingFrame):
(WebCore::LayerRendererChromium::useRenderSurface):
(WebCore::LayerRendererChromium::bindFramebufferToTexture):
(WebCore::LayerRendererChromium::setScissorToRect):
(WebCore::LayerRendererChromium::setDrawViewportRect):
(WebCore::LayerRendererChromium::initializeSharedObjects):
(WebCore::LayerRendererChromium::cleanupSharedObjects):
* platform/graphics/chromium/LayerRendererChromium.h:
(WebCore):

Canonical link: https://commits.webkit.org/101978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114787 268f45cc-cd09-0410-ab3c-d52691b4dbfc